--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,56 @@
-version: '3'
-
 services:
   db:
     image: postgres:16-alpine
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-    ports:
-      - '5432:5432'
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: store_development
     volumes:
-      - postgres13:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      retries: 5
+
   redis:
     image: redis:7.0.15-alpine
-    ports:
-      - '6379:6379'
     volumes:
       - redis_data:/data
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      retries: 5
+
   web:
     build: .
-    command: bundle exec rails server
+    command: bundle exec rails server -b 0.0.0.0 -p 3000
     volumes:
       - .:/rails
     ports:
-      - "3000:3000"
+      - 3000:3000
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
-      - DATABASE_URL=postgresql://postgres:password@db:5432/shopping_cart_api_development
-      - REDIS_URL=redis://redis:6379/0
+      DATABASE_URL: postgresql://postgres:password@db:5432/store_development
+      REDIS_URL: redis://redis:6379/0
+
   test:
     build: .
     command: bundle exec rspec
     volumes:
-      - .:/rails
+      - .:/rails:cached
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
-      - DATABASE_URL=postgresql://postgres:password@db:5432/shopping_cart_api_test
-      - REDIS_URL=redis://redis:6379/0
+      DATABASE_URL: postgresql://postgres:password@db:5432/store_test
+      REDIS_URL: redis://redis:6379/0
+
 volumes:
-  postgres13:
+  postgres_data:
   redis_data:
