--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -7,3 +7,7 @@
   - mailers
   - active_storage_analysis
   - active_storage_purge
+:schedule:
+  mark_cart_as_abandoned:
+    cron: '0 * * * *'
+    class: 'MarkCartAsAbandonedJob'
